# apple-writing

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  app.py  prototype.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_app.py  test_new_modules.py  test_prototype.py
Formula/: apple-tui.rb
apple_tui/: __main__.py  app.py  plugins.py  sessions.py  tools.py
docs/ideas/: apple-tui-v2.md
